fixed menu hover colors in mobile; machbros logo alignment; added iOS/mobile css 'solution' test for stellar.js on dragons

--- a/style.scss
+++ b/style.scss
@@ -224,6 +224,7 @@ section{
 		background-image: url('dragon_title_mobile.png');
 		background-size:100% auto;
 		background-repeat:no-repeat;
+		z-index:12;
 		@media only screen and (max-width:680px) and (orientation:landscape){
 			min-width:240px;
 			right:10%;
@@ -578,8 +579,10 @@ input, button, textarea{
 		header{
 			background:none;
 			border:none;
+			left:2em;
 			width:auto;
 			text-shadow: 2px 2px 2px black;
+			z-index:11;
 
 			h2{
 				font-size:3.5em;
